--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -84,10 +84,10 @@
         "    else:\n",
         "        bb_signal = \"Neutral\"\n",
         "\n",
-        "    if buy_count >= 3:\n",
+        "    if buy_count >= 2:\n",
         "        #print(vwap_signal, rsi_signal, bb_signal )\n",
         "        return \"Buy\"\n",
-        "    elif sell_count >= 3:\n",
+        "    elif sell_count >= 2:\n",
         "        #print(vwap_signal, rsi_signal, bb_signal )\n",
         "        return \"Sell\"\n",
         "    else:\n",
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 1145,\n",
-              "  'time': '2023-11-13T15:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.06834', 'h': '1.06838', 'l': '1.06748', 'c': '1.06798'}},\n",
+              "  'volume': 660,\n",
+              "  'time': '2023-11-13T18:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.06946', 'h': '1.07004', 'l': '1.06929', 'c': '1.07004'}},\n",
               " {'complete': True,\n",
-              "  'volume': 1452,\n",
-              "  'time': '2023-11-13T15:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.06796', 'h': '1.06928', 'l': '1.06794', 'c': '1.06889'}},\n",
+              "  'volume': 683,\n",
+              "  'time': '2023-11-13T18:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.07004', 'h': '1.07054', 'l': '1.06996', 'c': '1.07016'}},\n",
               " {'complete': False,\n",
-              "  'volume': 126,\n",
-              "  'time': '2023-11-13T16:00:00.000000000Z',\n",
-              "  'mid': {'o': '1.06890', 'h': '1.06916', 'l': '1.06889', 'c': '1.06913'}}]"
+              "  'volume': 287,\n",
+              "  'time': '2023-11-13T19:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.07018', 'h': '1.07018', 'l': '1.06988', 'c': '1.06990'}}]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -202,7 +202,7 @@
         "    #print(dfstream)\n",
         "    signal = signal_generator(dfstream)#\n",
         "    # EXECUTING ORDERS\n",
-        "    print(\"signal: \" + str(signal))\n",
+        "    #print(\"signal: \" + str(signal))\n",
         "    client = API(access_token)\n",
         "\n",
         "    SLTPRatio = 2.\n",
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 20,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
@@ -268,7 +268,7 @@
         "\n",
         "scheduler = BlockingScheduler()\n",
         "for i in range (len(currency_pairs)):\n",
-        "    scheduler.add_job(trading_job, 'cron', args = [currency_pairs[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,11,21,31,41,51', start_date='2022-01-12 12:00:00')\n",
+        "    scheduler.add_job(trading_job, 'cron', args = [currency_pairs[i],list_of_str_currency[i]], day_of_week='mon-fri', hour='00-23', minute='1,16,31,46', start_date='2022-01-12 12:00:00')\n",
         "scheduler.start()\n"
       ]
     },
