--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -291,7 +291,36 @@
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 16:31:00 PST)\" was missed by 0:01:58.082541\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 16:31:00 PST)\" was missed by 0:01:58.083060\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 16:31:00 PST)\" was missed by 0:01:58.083441\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 16:31:00 PST)\" was missed by 0:01:58.083901\n"
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 16:31:00 PST)\" was missed by 0:01:58.083901\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:01:00 PST)\" was missed by 0:00:01.000512\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:01:00 PST)\" was missed by 0:00:01.009394\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:01:00 PST)\" was missed by 0:00:01.017197\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.898159\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.909656\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.910171\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.910474\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.911059\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.911662\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.911848\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.912981\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.913625\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.913747\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.913955\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.914076\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.914885\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.917237\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.918440\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.920008\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.920871\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.921657\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.922657\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.923103\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.923607\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.924044\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.924463\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.925365\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.925916\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.926443\n"
           ]
         }
       ],
