--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -320,7 +320,41 @@
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.924463\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.925365\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.925916\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.926443\n"
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:16:00 PST)\" was missed by 0:02:21.926443\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.204574\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.212895\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.230479\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.240080\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.241850\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 17:31:00 PST)\" was missed by 0:00:01.243126\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'orderCreateTransaction': {'id': '692', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '692', 'requestID': '25144398896288171', 'time': '2023-11-14T01:16:01.595441424Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_JPY', 'units': '-2096', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '186.151', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '186.328', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderFillTransaction': {'id': '693', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '692', 'requestID': '25144398896288171', 'time': '2023-11-14T01:16:01.595441424Z', 'type': 'ORDER_FILL', 'orderID': '692', 'instrument': 'GBP_JPY', 'units': '-2096', 'requestedUnits': '-2096', 'price': '186.228', 'pl': '0.0000', 'quotePL': '0', 'financing': '0.0000', 'baseFinancing': '0', 'commission': '0.0000', 'accountBalance': '99892.2626', 'gainQuoteHomeConversionFactor': '0.006556966553', 'lossQuoteHomeConversionFactor': '0.006622865714', 'guaranteedExecutionFee': '0.0000', 'quoteGuaranteedExecutionFee': '0', 'halfSpreadCost': '0.2348', 'fullVWAP': '186.228', 'reason': 'MARKET_ORDER', 'tradeOpened': {'price': '186.228', 'tradeID': '693', 'units': '-2096', 'guaranteedExecutionFee': '0.0000', 'quoteGuaranteedExecutionFee': '0', 'halfSpreadCost': '0.2348', 'initialMarginRequired': '128.6252'}, 'fullPrice': {'closeoutBid': '186.228', 'closeoutAsk': '186.262', 'timestamp': '2023-11-14T01:15:59.746969868Z', 'bids': [{'price': '186.228', 'liquidity': '10000000'}], 'asks': [{'price': '186.262', 'liquidity': '10000000'}]}, 'homeConversionFactors': {'gainQuoteHome': {'factor': '0.00655696655288'}, 'lossQuoteHome': {'factor': '0.00662286571422'}, 'gainBaseHome': {'factor': '1.22120330'}, 'lossBaseHome': {'factor': '1.23347670'}}}, 'relatedTransactionIDs': ['692', '693', '694', '695'], 'lastTransactionID': '695'}\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.008875\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.042838\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.022218\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.028258\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.029894\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.044234\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.036510\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.039578\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.042650\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.011048\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.043218\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.043557\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.043941\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.031493\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.044417\n"
           ]
         }
       ],
