--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -354,7 +354,33 @@
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.043557\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.043941\n",
             "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.031493\n",
-            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.044417\n"
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:01:00 PST)\" was missed by 0:00:01.044417\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.689530\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.698677\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.704328\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.705098\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.705570\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.705742\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.705947\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.706209\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.706461\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.708824\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.709268\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.709820\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.710707\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.711429\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.712183\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.712948\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.713799\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.714548\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.715371\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.716777\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.717372\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.717945\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.719389\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.720015\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.720651\n",
+            "Run time of job \"trading_job (trigger: cron[day_of_week='mon-fri', hour='0-23', minute='1,16,31,46'], next run at: 2023-11-13 18:46:00 PST)\" was missed by 0:02:53.721262\n"
           ]
         }
       ],
