--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 685,\n",
-              "  'time': '2023-11-17T17:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.08825', 'h': '1.08914', 'l': '1.08824', 'c': '1.08888'}},\n",
-              " {'complete': True,\n",
               "  'volume': 579,\n",
               "  'time': '2023-11-17T17:45:00.000000000Z',\n",
               "  'mid': {'o': '1.08888', 'h': '1.08906', 'l': '1.08867', 'c': '1.08903'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 239,\n",
+              " {'complete': True,\n",
+              "  'volume': 627,\n",
               "  'time': '2023-11-17T18:00:00.000000000Z',\n",
-              "  'mid': {'o': '1.08902', 'h': '1.08916', 'l': '1.08892', 'c': '1.08896'}}]"
+              "  'mid': {'o': '1.08902', 'h': '1.08925', 'l': '1.08884', 'c': '1.08922'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 319,\n",
+              "  'time': '2023-11-17T18:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.08922', 'h': '1.08950', 'l': '1.08922', 'c': '1.08935'}}]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -217,17 +217,19 @@
         "    #print(dfstream.iloc[:-1,:])\n",
         "    #print(TPBuy, \"  \", SLBuy, \"  \", TPSell, \"  \", SLSell)\n",
         "    #signal = 2\n",
+        "\n",
+        "    #THE WRONG CODE SELL SOULD BE -2000 and BUY SHOULD BE 2000\n",
         "    #Sell\n",
         "    if signal == \"Sell\":\n",
         "        random_integer = random.randint(-100, 100)\n",
-        "        mo = MarketOrderRequest(instrument=string_currency, units=-2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPSell).data, stopLossOnFill=StopLossDetails(price=SLSell).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)\n",
         "    #Buy\n",
         "    elif signal == \"Buy\":\n",
         "        random_integer = random.randint(-100, 100)\n",
-        "        mo = MarketOrderRequest(instrument=string_currency, units=2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
+        "        mo = MarketOrderRequest(instrument=string_currency, units=-2000 + random_integer, takeProfitOnFill=TakeProfitDetails(price=TPBuy).data, stopLossOnFill=StopLossDetails(price=SLBuy).data)\n",
         "        r = orders.OrderCreate(accountID, data=mo.data)\n",
         "        rv = client.request(r)\n",
         "        print(rv)"
@@ -235,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -257,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
