--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -263,7 +263,17 @@
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'orderCreateTransaction': {'id': '1746', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1746', 'requestID': '79188942051216308', 'time': '2023-11-17T18:31:00.615947997Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_USD', 'units': '-1984', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.09017', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.08906', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1747', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1746', 'requestID': '79188942051216308', 'time': '2023-11-17T18:31:00.615947997Z', 'type': 'ORDER_CANCEL', 'orderID': '1746', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1746', '1747'], 'lastTransactionID': '1747'}\n",
+            "{'orderCreateTransaction': {'id': '1748', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1748', 'requestID': '79188942051216529', 'time': '2023-11-17T18:31:00.782250889Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_JPY', 'units': '-2043', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '163.152', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '163.035', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1749', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1748', 'requestID': '79188942051216529', 'time': '2023-11-17T18:31:00.782250889Z', 'type': 'ORDER_CANCEL', 'orderID': '1748', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1748', '1749'], 'lastTransactionID': '1749'}\n",
+            "{'orderCreateTransaction': {'id': '1752', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1752', 'requestID': '61174547316297209', 'time': '2023-11-17T18:46:00.663125412Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_GBP', 'units': '2038', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.87486', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.87546', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1753', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1752', 'requestID': '61174547316297209', 'time': '2023-11-17T18:46:00.663125412Z', 'type': 'ORDER_CANCEL', 'orderID': '1752', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1752', '1753'], 'lastTransactionID': '1753'}\n"
+          ]
+        }
+      ],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
